--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 h1 {
-    font-size: 90px;
+    font-size: 5.65rem;
     margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
     color: #66BFBF;
